--- a/src/app/utils/loading-spinner/loading-spinner.scss
+++ b/src/app/utils/loading-spinner/loading-spinner.scss
@@ -1,11 +1,14 @@
 .block-page {
   width: 100%;
   height: 100vh;
-  background-color: rgba(139, 6, 6, 0.411);
+  background-color: rgba(15, 14, 46, 0.473);
   position: absolute;
   top: 0;
   z-index: 1000;
 }
 
 .spinner {
+  background-color: rgba(165, 7, 42);
+  width: 50px;
+  height: 50px;
 }
