--- a/src/app.scss
+++ b/src/app.scss
@@ -1,32 +1,1 @@
-* {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  box-sizing: border-box;
-}
-html,
-body {
-  min-height: 100vh;
-  font-size: 16px;
-  font-family: 'Poppins';
-  font-weight: 400;
-}
-
-input {
-  height: 48px;
-  padding-left: 24px;
-  padding-right: 24px;
-  border: 1.5px solid #eaeaea;
-  border-radius: 10px;
-  outline: 2px solid #5468ff00;
-  transition: border-color 0.1s ease-in-out;
-  transition: outline-color 0.1s ease-in-out;
-}
-
-input:focus {
-  border-color: #0d6efd;
-  outline-color: #0d6dfd7a;
-
-  //   outline: 1.5px solid #5468ff;
-  //  outline-offset: -1px;
-}
+@import './app/assets/style/base';
