Ajustes nos formularios

--- a/src/app/assets/style/_variables.scss
+++ b/src/app/assets/style/_variables.scss
@@ -7,6 +7,7 @@ $theme-smoak-white: #f5f5f5;
 $theme-dark-grey: #65656d;
 $theme-light-grey: #eaeaea;
 $theme-grey: #aeaeae;
+$theme-error: red;
 $placeholder-color: #929292;
 
 //Box shadow
