Finalizado tela de login e forgot password

--- a/src/app/assets/style/_variables.scss
+++ b/src/app/assets/style/_variables.scss
@@ -3,6 +3,7 @@
 $theme-blue: #0f0e2e;
 $theme-black: #3d3b3b;
 $theme-white_color: #ffffff;
+$theme-orange: #f97d44;
 $theme-smoak-white: #f5f5f5;
 $theme-dark-grey: #65656d;
 $theme-light-grey: #eaeaea;
