--- a/src/app/components/pages/login/login.scss
+++ b/src/app/components/pages/login/login.scss
@@ -1,18 +1,3 @@
-.login-view {
-  height: 100vh;
-}
-
-.logo {
-  width: 400px;
-  height: 200px;
-  object-fit: cover;
-}
-
-.ttt {
-  height: 500px;
-}
-
 .teste {
-  background-image: url('../../../assets/img/al-icon.png');
-  background-repeat: repeat-y;
+  color: white;
 }
