--- a/src/app/assets/style/components/login/_login.scss
+++ b/src/app/assets/style/components/login/_login.scss
@@ -14,8 +14,8 @@
 }
 
 .al-login {
-  background: linear-gradient(350deg, rgb(167, 7, 43), $theme-blue);
-  animation: gradient 15s ease infinite;
+  background: linear-gradient(350deg,$theme-blue, rgb(167, 7, 43));
+  animation: gradient 8s ease infinite;
   background-size: 400% 400%;
   .al-input-container {
     border-radius: $theme-border;
