User page logout expired User loading page View-Home

--- a/src/app/assets/style/base.scss
+++ b/src/app/assets/style/base.scss
@@ -12,3 +12,5 @@
 // Components
 @import './components/form/_form';
 @import './components/login/login';
+@import './components/loading-page/_loading-page';
+@import './components/view/home/_home';
