--- a/src/app/components/layout/main-layout/template/main-template.scss
+++ b/src/app/components/layout/main-layout/template/main-template.scss
@@ -3,8 +3,8 @@
   height: 100vh;
   display: grid;
   grid-template:
-    'sidebar header header'
-    'sidebar content content';
+    'sidebar header header header header header header header header header'
+    'sidebar content content content content content content content content content';
 
   grid-template-rows: 50px auto;
 }
