Ajustando template principal Side bar and header

--- a/src/app/assets/style/elements/button/_button.scss
+++ b/src/app/assets/style/elements/button/_button.scss
@@ -6,6 +6,10 @@
   border-radius: 12px;
   font-size: $text-breadcrumb-size;
   font-weight: $text-breadcrumb-weight;
+  &:hover {
+    background-color: $theme-blue;
+    opacity: 0.7;
+  }
 }
 
 .al-md-button {
