--- a/src/app/assets/style/base.scss
+++ b/src/app/assets/style/base.scss
@@ -14,3 +14,5 @@
 @import './components/login/login';
 @import './components/loading-page/_loading-page';
 @import './components/view/home/_home';
+@import './components/template/_main-template';
+@import './components/template/_header';
