--- a/src/app/assets/style/_variables.scss
+++ b/src/app/assets/style/_variables.scss
@@ -6,8 +6,8 @@ $theme-white_color: #ffffff;
 $theme-orange: #f97d44;
 $theme-smoak-white: #f5f5f5;
 $theme-dark-grey: #65656d;
-$theme-light-grey: #eaeaea;
-$theme-grey: #aeaeae;
+$theme-light-grey: #dee2e6;
+$theme-grey: #eaeaea;
 $theme-error: red;
 $placeholder-color: #929292;
 
@@ -25,8 +25,10 @@ $theme-text-weight: 400;
 $theme-text-size: 16px;
 $theme-line-height: 1.6;
 // Text-breacrumb
-$text-breadcrumb-weight: 500;
-$text-breadcrumb-size: 20px;
+$text-theme-h1-weight: 600;
+$text-theme-h1-size: 24px;
+$text-theme-h2-weight: 400;
+$text-theme-h2-size: 20px;
 // Text-Radio-Button
 $text-radio-weight: 400;
 $text-radio-size: 14px;
