--- a/src/app/assets/style/_root.scss
+++ b/src/app/assets/style/_root.scss
@@ -13,6 +13,10 @@ body {
   line-height: $theme-line-height;
   background-color: $theme-smoak-white;
 }
+p {
+  padding: 0;
+  margin: 0;
+}
 
 h1 {
   color: $theme-black;
