Tela de lista Tela de edit Search bar Input checkbox

--- a/src/app/assets/style/_variables.scss
+++ b/src/app/assets/style/_variables.scss
@@ -1,6 +1,6 @@
 //Colors
 
-$theme-blue: #0f0e2e;
+$theme-blue: #0F0E2E;
 $theme-black: #3d3b3b;
 $theme-white_color: #ffffff;
 $theme-orange: #f97d44;
