--- a/src/app/assets/style/base.scss
+++ b/src/app/assets/style/base.scss
@@ -7,6 +7,8 @@
 // Elements
 @import './elements/button/_button';
 @import './elements/input/_input';
+@import './elements/input/_input-search';
+@import './elements/input/_input-checkbox';
 @import './elements/label/_label';
 
 // Components
