--- a/src/app/assets/style/elements/input/_input-search.scss
+++ b/src/app/assets/style/elements/input/_input-search.scss
@@ -1,25 +1,24 @@
-.al-input-wrapper {
+.al-input-search-wrapper {
   position: relative;
-  .al-input {
+  
+
+  .al-input-search {
     box-sizing: border-box;
     background-color: $theme-smoak-white;
     width: 100%;
     height: 48px;
-    padding-left: 24px;
-    padding-right: 53px;
+    padding-left: 53px;
+    padding-right: 42px;
     border: $theme-border;
     border-radius: 10px;
     outline: 1.5px solid #5468ff00;
     transition: border-color 0.05s ease-in-out;
     transition: outline-color 0.05s ease-in-out;
   }
-  .al-input-disabled {
-    opacity: 0.7;
-  }
-  .al-input-icon {
+  .al-input-search-icon-left {
     position: absolute;
     top: 9px;
-    right: 14px;
+    left: 14px;
     svg {
       width: 27px;
       height: 27px;
@@ -27,26 +26,40 @@
       transition: color 0.05s ease-in-out;
     }
   }
-  & .al-input:focus {
+
+  .al-input-search-icon-right {
+    position: absolute;
+    top: 9px;
+    right: 14px;
+    svg {
+      width: 20px;
+      height: 20px;
+      color: $placeholder-color;
+      transition: color 0.05s ease-in-out;
+    }
+    &:hover {
+      cursor: pointer;
+      opacity: 0.6;
+    }
+  }
+
+  & .al-input-search:focus {
     border-color: $theme-blue;
     outline-color: $theme-blue;
   }
-  & .al-input:focus ~ .al-input-icon {
+  & .al-input-search:focus ~ .al-input-search-icon-left,.al-input-search-icon-right {
     svg {
       color: $theme-blue;
     }
   }
-  & .al-input:focus ~ label {
+  & .al-input-search:focus ~ label {
     color: $theme-blue;
     font-weight: 600;
   }
 }
 
-.al-input-icon-disabled {
-  .al-input {
-    padding-right: 24px;
-  }
-  .al-input-icon {
+.al-input-search-icon-left-disabled {
     display: none;
-  }
+  
 }
+
