--- a/src/app/assets/style/elements/input/_input-search.scss
+++ b/src/app/assets/style/elements/input/_input-search.scss
@@ -1,64 +1,74 @@
-.al-input-search-wrapper {
-  position: relative;
-  
-
-  .al-input-search {
-    box-sizing: border-box;
-    width: 100%;
-    height: 48px;
-    padding-left: 53px;
-    padding-right: 42px;
-    border: $theme-border;
-    border-radius: 10px;
-    outline: 1.5px solid #5468ff00;
-    transition: border-color 0.05s ease-in-out;
-    transition: outline-color 0.05s ease-in-out;
-  }
-  .al-input-search-icon-left {
-    position: absolute;
-    top: 9px;
-    left: 14px;
+.al-close-input-icon {
     svg {
-      width: 27px;
-      height: 27px;
-      color: $placeholder-color;
-      transition: color 0.05s ease-in-out;
-    }
-  }
-
-  .al-input-search-icon-right {
-    position: absolute;
-    top: 9px;
-    right: 14px;
-    svg {
-      width: 20px;
-      height: 20px;
-      color: $placeholder-color;
-      transition: color 0.05s ease-in-out;
+      width: 20px !important;
+      height: 20px !important;
     }
     &:hover {
       cursor: pointer;
       opacity: 0.6;
     }
   }
-
-  & .al-input-search:focus {
-    border-color: $theme-blue;
-    outline-color: $theme-blue;
-  }
-  & .al-input-search:focus ~ .al-input-search-icon-left,.al-input-search-icon-right {
-    svg {
-      color: $theme-blue;
-    }
-  }
-  & .al-input-search:focus ~ label {
-    color: $theme-blue;
-    font-weight: 600;
-  }
-}
-
-.al-input-search-icon-left-disabled {
-    display: none;
+// .al-input-search-wrapper {
+//   position: relative;
   
-}
+
+//   .al-input-search {
+//     box-sizing: border-box;
+//     width: 100%;
+//     height: 48px;
+//     padding-left: 53px;
+//     padding-right: 42px;
+//     border: $theme-border;
+//     border-radius: 10px;
+//     outline: 1.5px solid #5468ff00;
+//     transition: border-color 0.05s ease-in-out;
+//     transition: outline-color 0.05s ease-in-out;
+//   }
+//   .al-input-search-icon-left {
+//     position: absolute;
+//     top: 9px;
+//     left: 14px;
+//     svg {
+//       width: 27px;
+//       height: 27px;
+//       color: $placeholder-color;
+//       transition: color 0.05s ease-in-out;
+//     }
+//   }
+
+//   .al-input-search-icon-right {
+//     position: absolute;
+//     top: 9px;
+//     right: 14px;
+//     svg {
+//       width: 20px;
+//       height: 20px;
+//       color: $placeholder-color;
+//       transition: color 0.05s ease-in-out;
+//     }
+//     &:hover {
+//       cursor: pointer;
+//       opacity: 0.6;
+//     }
+//   }
+
+//   & .al-input-search:focus {
+//     border-color: $theme-blue;
+//     outline-color: $theme-blue;
+//   }
+//   & .al-input-search:focus ~ .al-input-search-icon-left,.al-input-search-icon-right {
+//     svg {
+//       color: $theme-blue;
+//     }
+//   }
+//   & .al-input-search:focus ~ label {
+//     color: $theme-blue;
+//     font-weight: 600;
+//   }
+// }
+
+// .al-input-search-icon-left-disabled {
+//     display: none;
+  
+// }
 
