--- a/src/app/assets/style/elements/input/_input-select.scss
+++ b/src/app/assets/style/elements/input/_input-select.scss
@@ -1,42 +1,43 @@
-.al-input-wrapper {
+select#xyz {
+    border:0px;
+    outline:0px;
+ }
+
+select {
+    box-sizing: border-box ;
+    width: 100%  !important;
+    height: 48px  !important;
+    padding-left: 24px  !important;
+    padding-right: 24px  !important;
+    border: $theme-border  ;
+    border-radius: 10px  !important;
+    outline: 1.5px solid #5468ff00  !important;
+    transition: border-color 0.05s ease-in-out  !important;
+    transition: outline-color 0.05s ease-in-out  !important;
+    box-shadow: none !important;
+    &:focus {
+      border: 2px solid $theme-blue !important;
+    };
+    &:disabled {
+      cursor: not-allowed  !important;
+    };
+    option {
+        border: $theme-border  !important;
+        border-color: $theme-blue !important;
+    }
+    option:first-child {
+        border-radius: 10px;
+    }
+    option:last-child {
+        border-radius: 10px;
+    }
+  }
+
+  .al-select-wrapper {
     position: relative;
-    .al-input {
-      box-sizing: border-box;
-      background-color: $theme-smoak-white;
-      width: 100%;
-      height: 48px;
-      padding-left: 24px;
-      padding-right: 53px;
-      border: $theme-border;
-      border-radius: 10px;
-      outline: 1.5px solid #5468ff00;
-      transition: border-color 0.05s ease-in-out;
-      transition: outline-color 0.05s ease-in-out;
-    }
-    .al-input-disabled {
-      opacity: 0.7;
-    }
-    & .al-input:focus {
-      border-color: $theme-blue;
-      outline-color: $theme-blue;
-    }
-    & .al-input:focus ~ .al-input-icon {
-      svg {
-        color: $theme-blue;
-      }
-    }
-    & .al-input:focus ~ label {
-      color: $theme-blue;
-      font-weight: 600;
-    }
+          & select:focus ~ label {
+            color: $theme-blue;
+            font-weight: 600;
+          }
   }
-  
-  .al-input-icon-disabled {
-    .al-input {
-      padding-right: 24px;
-    }
-    .al-input-icon {
-      display: none;
-    }
-  }
-  
+ 
