--- a/src/app/assets/style/base.scss
+++ b/src/app/assets/style/base.scss
@@ -17,3 +17,4 @@
 @import './components/template/_header';
 @import './components/view/home/_home';
 @import './components/view/custom-bread-crumb/_custom-bread-crumb';
+@import './components/view/modal/modal';
