Criado skelleton page e feito limpezas

--- a/src/app/assets/style/base.scss
+++ b/src/app/assets/style/base.scss
@@ -8,6 +8,7 @@
 @import './elements/button/_button';
 @import './elements/input/_input';
 @import './elements/label/_label';
+@import './elements/data-grid/_data-grid';
 
 // Components
 @import './components/form/_form';
