--- a/src/app/assets/style/components/template/_header.scss
+++ b/src/app/assets/style/components/template/_header.scss
@@ -6,7 +6,16 @@
 .al-dropdown-sidebar-icon {
   color: $theme-white_color;
   display: none;
-  
+
+  &:hover {
+    opacity: 0.7;
+    cursor: pointer;
+  }
+}
+
+.al-support-icon {
+  color: $theme-blue;
+
   &:hover {
     opacity: 0.7;
     cursor: pointer;
@@ -20,5 +29,8 @@
   }
   .al-dropdown-sidebar-icon {
     display: block;
+  }
+  .al-support-icon {
+    color: $theme-white_color;
   }
 }
