--- a/src/app/assets/style/components/view/modal/_modal.scss
+++ b/src/app/assets/style/components/view/modal/_modal.scss
@@ -4,7 +4,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
   min-width: 400px;
-  background-color: #ffffff;
+  background-color: white;
+
   border-radius: 10px;
 }
 
