--- a/src/app/assets/style/base.scss
+++ b/src/app/assets/style/base.scss
@@ -15,6 +15,7 @@
 @import './components/loading-page/_loading-page';
 @import './components/template/_main-template';
 @import './components/template/_header';
+@import './components/template/sidebar';
 @import './components/view/home/_home';
 @import './components/view/custom-bread-crumb/_custom-bread-crumb';
 @import './components/view/modal/modal';
