--- a/src/app/assets/style/components/template/_sidebar.scss
+++ b/src/app/assets/style/components/template/_sidebar.scss
@@ -28,6 +28,28 @@
     }
 }
 
+.al-dropdown-button {
+    all: unset;
+    cursor: pointer;
+    position: absolute;
+    width: 100%;
+    height: 38px;
+}
+
+
+.al-dropdown-open {
+    max-height: 500px !important;
+    .al-sidebar-li  .al-sidebar-arrow  {
+        transform: rotate(0deg) !important;
+    }
+    .al-sidebar-li .al-sidebar-ul  .al-sidebar-arrow   {
+        transform: rotate(180deg) !important;
+    }
+  
+ 
+   
+}
+
 .al-sidebar-li {
     position: relative;
     line-height: 34px;
@@ -36,13 +58,12 @@
     &:hover {
         cursor: pointer;
     }
-
-    &:hover  > .al-sidebar-ul  {
-        max-height: 500px;
-    }
-    &:hover  > .al-sidebar-arrow  {
-        transform: rotate(0deg);
-    }
+    //  > .al-sidebar-ul  {
+    //     max-height: 500px !important;
+    // }
+    //  > .al-sidebar-arrow  {
+    //     transform: rotate(0deg) !important;
+    // }
 }
 
 .al-sidebar-li-link {
@@ -53,7 +74,7 @@
         background-color: inherit;
         color: white;
         width: 100%;
-        text-align: start;
+         text-align: start;
     }
     &:hover {
         background-color: white;
