--- a/src/app/assets/style/components/template/_sidebar.scss
+++ b/src/app/assets/style/components/template/_sidebar.scss
@@ -14,21 +14,79 @@
     width: 60%;
   }
 
-.al-sidebar-ul {
+  .al-sidebar-ul {
+    margin: 10px 0 0 0;
     padding: 0;
     overflow: hidden;
     white-space: nowrap;
-    margin: 0;
-    width: 100%;
     list-style: none;
     color: $theme-white_color;
     transition: all 0.3s ease-in-out;
-    &  .al-sidebar-ul {
-        border-left: $theme-border;
-    }
+  }
+
+  .al-sidebar-ul .al-sidebar-ul {
+    margin: 10px 0 10px 0;
+    padding: 0px 33px 0px 40px;
+    margin-left: 10px;
+    overflow: hidden;
+    max-height: 0;
+    border-left: $theme-border;
 }
 
-.al-dropdown-button {
+.al-sidebar-ul .al-sidebar-ul .al-sidebar-ul {
+    border-left: none;
+    padding: 0;
+}
+
+.dropdown-open {
+    max-height: 0px !important;
+}
+
+  .al-sidebar-li {
+    position: relative;
+    line-height: 34px;
+  
+    a, button {
+        text-decoration: none; /* no underline */
+        background-color: inherit;
+        color: white;
+        width: 100%;
+        text-align: start;
+        transition: padding 0.1s ease-in-out;
+    }
+    & button:hover {
+        background-color: white;
+        color: $theme-blue;
+        border-radius: 10px;
+        padding: 0 10px 0 10px;
+        .al-sidebar-arrow {
+            right: 10px;
+        }
+    }
+  }
+
+  .al-sidebar-arrow {
+    opacity: 0;
+    display: inline-block;
+    position: absolute;
+    right: 0;
+    transition: all 0.2s ease-in-out;
+  }
+
+  .al-sidebar-arrow-up {
+    transform: rotate(180deg) ;
+  }
+  .al-sidebar-arrow-down {
+    transform: rotate(0deg) ;
+  }
+
+  .al-sidebar-text {
+    display: inline-block;
+    margin-left: 10px;
+
+  }
+
+  .al-dropdown-button {
     all: unset;
     cursor: pointer;
     position: absolute;
@@ -36,71 +94,6 @@
     height: 38px;
 }
 
-
-.al-dropdown-open {
-    max-height: 500px !important;
-    .al-sidebar-li  .al-sidebar-arrow  {
-        transform: rotate(0deg) !important;
-    }
-    .al-sidebar-li .al-sidebar-ul  .al-sidebar-arrow   {
-        transform: rotate(180deg) !important;
-    }
-  
- 
-   
-}
-
-.al-sidebar-li {
-    position: relative;
-    line-height: 34px;
-    overflow: clip;
-
-    &:hover {
-        cursor: pointer;
-    }
-    //  > .al-sidebar-ul  {
-    //     max-height: 500px !important;
-    // }
-    //  > .al-sidebar-arrow  {
-    //     transform: rotate(0deg) !important;
-    // }
-}
-
-.al-sidebar-li-link {
-    border-radius: 10px;
-   
-    a, button {
-        text-decoration: none; /* no underline */
-        background-color: inherit;
-        color: white;
-        width: 100%;
-         text-align: start;
-    }
-    &:hover {
-        background-color: white;
-        a, button {
-            color: $theme-blue;
-        }
-    }
-}
-
-.al-sidebar-text{
-    display: inline-block;
-    margin-left: 10px;
-}
-
-.al-sidebar-arrow {
-    display: inline-block;
-    opacity: 0;
-    position: absolute;
-    right: 0;
-    transform: rotate(180deg);
-    transition: all 0.3s ease-in-out;
-}
-
-.al-sibebar-icon {
-    display: inline-block;
-}
 
 .al-sidebar-close-icon {
     opacity: 0;
@@ -131,21 +124,6 @@
    
 }
 
-.al-sidebar-ul .al-sidebar-ul {
-    margin: 4px;
-    padding: 0px 33px 0px 40px;
-    overflow: hidden;
-    max-height: 0;
-}
-
-.al-sidebar-ul .al-sidebar-ul .al-sidebar-ul {
-    border: 0;
-    padding: 0px 10px 0px 20px;
-}
-
-.al-sidebar-ul .al-sidebar-ul .al-sidebar-li {
-    line-height: 45px;
-}
 
 @media (min-width: 760px) {
 
@@ -161,8 +139,9 @@
       .al-sidebar-logo {
         transform:scale(3.5);
       }
-      .al-sidebar-close-icon {
-        opacity: 1;
+   
+    .dropdown-open {
+        max-height: 500px !important;
     }
 
     }
@@ -177,6 +156,9 @@
     }
     .al-sidebar-close-icon {
         opacity: 1;
+    }
+    .dropdown-open {
+        max-height: 500px !important;
     }
 }
   
